--- a/package.json
+++ b/package.json
@@ -8,13 +8,24 @@
   "scripts": {
     "build": "tsc",
     "format": "prettier . --write",
-    "check-format": "prettier . --check"
+    "check-format": "prettier . --check",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-onboarding": "^8.4.2",
+    "@storybook/blocks": "^8.4.2",
+    "@storybook/react": "^8.4.2",
+    "@storybook/react-vite": "^8.4.2",
+    "@storybook/test": "^8.4.2",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "prettier": "^3.3.3",
+    "storybook": "^8.4.2",
     "typescript": "^5.6.3"
   },
   "author": {
