--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "@veel/design-system",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.ts",
   "type": "module",
-  "private": true,
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./config": {
+      "import": "./tailwind.config.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "format": "prettier . --write",
@@ -26,6 +33,7 @@
     "@types/react": "^18.3.12",
     "prettier": "^3.3.3",
     "storybook": "^8.4.2",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "author": {
@@ -33,5 +41,8 @@
     "email": "novelian.nova@gmail.com",
     "url": "https://bishamkunwor.com.np"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "react": "^18.3.1"
+  }
 }
