--- a/package.json
+++ b/package.json
@@ -3,15 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/types/index.d.ts"
-    },
-    "./config": {
-      "import": "./tailwind.config.js"
-    }
-  },
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "format": "prettier . --write",
