--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "0.0.1",
   "description": "",
   "type": "module",
-  "main": "src/index.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
+    },
+    "./config/styles": {
+      "import": "./tailwind.config.js"
+    }
+  },
   "scripts": {
     "build": "tsc",
     "format": "prettier . --write",
